--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,6 @@
-
 :root{
     --vermelha: #E50914; /*Definindo como variavel as cores padrões do site*/
-    --preta: #141414;
+    --preta: #1a1a1a;
     --cinza:  #AAA;
 }
 
@@ -14,17 +13,28 @@
 
 /**********ELEMENTOS BASE************/
 
-body {
-    background: var(--preta); /*usando a var criada*/
+body{
+    background: var(--preta); /* usando a var criada */
     font-family: 'Times New Roman','Franklin Gothic Medium', 'Arial Narrow', Times, Arial, sans-serif;
     color: white;
+}
+
+header{
+    width: 100%;
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 6%, rgba(0,0,0,0.2721463585434174) 62%, rgba(0,0,0,0) 90%); /*Gadriente no menu*/
+    height: 80px;
+    position: fixed; /*Menu fixo*/
+    z-index: 99;
 }
 
 header .container{
     display: flex;
     flex-direction: row; /*A exibição do nosso container passa a ser por linha*/
     align-items: center; /*Alinhando verticalmente nossos elementos ao centro*/
-    justify-content: space-between ; /*alinhando horizontamente os elementos e criando espaçamento entre as class/tag logo e nav*/
+    justify-content: space-between;
+    background: transparent;
+    height: 100%;
 }
 
 header .logo{
@@ -32,9 +42,18 @@ header .logo{
     font-family: 'Arial';
     font-weight: bolder;
     font-size: 30px;
+    padding-right: 40px;
 }
 
-header nav a {
+header .menu{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+header nav a{
+    font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 14px;
     text-decoration: none;
     color: #fff;
     margin-right: 20px;
@@ -44,13 +63,30 @@ header nav a:hover{
     color: var(--cinza); /*Ao passar o mouse sobre o link irá alterar a cor*/
 }
 
+header .menu-sec{
+    width: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header .menu-sec img{
+    height: 20px;
+    width: 20px;
+}
+
+header .perfil{
+    border-radius: 3px;
+}
+
 /**********FILME PRINCIPAL************/
 
 .filme-principal{
     font-size: 16px;
     background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.60)100%),url('../img/capa.jpg') ;
     
-    height: 400px;
+    height: 35%;
     background-size: cover;
 
     display:flex;
@@ -61,42 +97,87 @@ header nav a:hover{
 }
 
 .container{
-    margin-left: 20px ;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.filme-principal .container{
+    width: 70%;
 }
 
 .filme-principal .descricao{
+    margin-top: 2%;
     margin-bottom: 10px;
+    font-size: 20px;
+    white-space: pre-wrap;
 }
 
+.filme-principal .titulo{
+    margin-top: 15%;
+    font-size: 60px;
+}
 
 .avaliacao img{
     margin-bottom: 20px;
 }
 
-.titulo{
-    font-size: 40px;
-}
-
-.botao {
+.botao{
     background-color: rgb(255, 255, 255);
     color:black;
-    font:inherit bold;
     border: none;
     opacity: 1;
 
-    
+    font-weight: bold;
     border-radius: 4px;
     padding-left: 2rem;
     padding-right: 2.4rem;
     height: 35px;
     margin-right: 12px;
-    
+    margin-bottom: 50px;
+
+    cursor: pointer;
+    transition: .2s ease all;
 }
 
-.bkcolor{
+.bkcolor1{
     background: rgba(109,109,110,0.7);
     color:white;
 
 }
 
+.bkcolor2:hover{
+    background: rgba(255, 255, 255, 0.70)50%;
+}
 
+.bkcolor1:hover {
+    background: rgba(109,109,110,.60)50%;
+}
+
+.botao i{
+    margin-right: 5px;
+}
+
+.box-filme {
+    height: 100%;
+    width: 100%;
+    display: block;
+    border-radius: 4px;
+    margin-top: 5px;
+}
+
+.navbar-fixed-top.scrolled {
+    background-color: #000 !important;
+    transition: background-color 200ms linear;
+}
+
+.carrosel-filmes{
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-bottom: 80px;
+}
+
+h2{
+    margin-top: 20px;
+    font-family: sans-serif;
+    font-size: 18px;
+}
